CLIENT/CodeAssessMetadata/main/default/objects/QuestionResult__c/QuestionResult__c.object-meta.xml
<CustomObject>
    <label>QuestionResult</label>
    <nameField>
        <label>QuestionResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuestionResults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>