CLIENT/CodeAssessMetadata/main/default/objects/QuestionResult__c/fields/CandidateResult__c.field-meta.xml
<CustomField>
    <fullName>CandidateResult__c</fullName>
    <label>CandidateResult</label>
    <referenceTo>CandidateResult__c</referenceTo>
    <relationshipLabel>QuestionResults</relationshipLabel>
    <relationshipName>QuestionResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>