CLIENT/CodeAssessMetadata/main/default/objects/QuestionResult__c/fields/CodeCoverage__c.field-meta.xml
<CustomField>
    <fullName>CodeCoverage__c</fullName>
    <label>CodeCoverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>