CLIENT/CodeAssessMetadata/main/default/objects/QuestionResult__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>QuestionResults</relationshipLabel>
    <relationshipName>QuestionResults</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>